--- a/config/aws.yml
+++ b/config/aws.yml
@@ -1,2 +1,2 @@
-access_key_id: AKIAJ5JTBX3TLGLR4TTA
-secret_access_key: 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
+access_key_id: AKIAIEA7RRIVJIVAZEBA
+secret_access_key: 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
