--- a/app.json
+++ b/app.json
@@ -1,3 +1,15 @@
 {
-    "stack": "heroku-22"
+    "stack": "heroku-22",
+    "buildpacks": [{
+            "url": "heroku-community/apt"
+        }, {
+            "url": "https://github.com/brandoncc/heroku-buildpack-vips"
+        },
+        {
+            "url": "https://github.com/heroku/heroku-buildpack-activestorage-preview"
+        },
+        {
+            "url": "heroku/ruby"
+        }
+    ]
 }
