added more spam words

--- a/config/blacklist.yml
+++ b/config/blacklist.yml
@@ -1125,3 +1125,82 @@ yellow showers
 yiffy
 zoophilia
 🖕
+trading
+stocks
+weight loss
+meet singles
+No hidden charges
+No hidden costs
+Lose weight
+Best price
+Best rates
+Cash bonus
+Money order
+Make money
+Big bucks
+Pure profits
+Cures
+Weight loss
+Meet singles
+No catch
+No cost
+No credit check
+No fees
+No gimmick
+Refinance
+No interest
+No investment
+No capital
+No obligation
+No purchase necessary
+No questions asked
+No strings attached
+No experience
+Requires initial investment
+This isn’t a scam
+This isn’t junk
+This isn’t spam
+Earn extra cash
+Earn extra income
+Additional income
+Expect to earn
+Fast cash
+Financial freedom
+Lowest price
+Free access
+Free consultation
+Free hosting
+Free info
+Free investment
+Free membership
+Free money
+Free preview
+Free quote
+Free offer
+Free sample
+Free trial
+Free web traffic
+Free search engine listings
+Free gift
+Free DVD
+Full refund
+Name brand products
+Month trial offer
+Get out of debt
+Increase sales
+Increase traffic
+Satisfaction guaranteed
+Get paid
+Get rich
+Unsecured credit
+Own boss
+Work from home
+Home-based business
+No credit card
+Accept credit cards
+Credit card offers
+Low mortgage rates
+Low interest rates
+Easy terms
+Priority mail
+Casino
