--- a/config/blacklist.yml
+++ b/config/blacklist.yml
@@ -716,6 +716,7 @@ trollop
 tuss
 twat
 twonk
+fukin
 u fukin wanker
 wally
 wanker
@@ -723,6 +724,7 @@ wankstain
 wazzack
 whore
 https://
+http://
 2g1c
 2 girls 1 cup
 acrotomophilia
