--- a/settings.json
+++ b/settings.json
@@ -5,6 +5,7 @@
     "editor.formatOnSave": true
   },
   "files.associations": {
-    "*.erb": "erb"
+    "*.erb": "erb",
+    "*.html.erb": "erb"
   }
 }
