--- a/settings.json
+++ b/settings.json
@@ -5,7 +5,6 @@
     "editor.formatOnSave": true
   },
   "files.associations": {
-    "*.erb": "erb",
-    "*.html.erb": "erb"
+    "*.erb": "erb"
   }
 }
