added tracking url to editor picks urls

--- a/config/blacklist.yml
+++ b/config/blacklist.yml
@@ -97,6 +97,11 @@
 - butt plug
 - buttbandit
 - buttbanger
+- ur mom
+- your mom
+- you're mom
+- ur m0m
+- yur mom
 - buttcrack
 - buttfuck
 - buttfucker
