--- a/config/blacklist.yml
+++ b/config/blacklist.yml
@@ -203,6 +203,7 @@
 - cunthair
 - cuntwhisker
 - cuntwisker
+- die
 - cuze
 - d i c k
 - daisy chain
@@ -937,6 +938,9 @@ jizz
 juggs
 kike
 kinbaku
+backlinks
+darkweb
+seo
 kinkster
 kinky
 knobbing
