multiply trending score by 1000

--- a/config/blacklist.yml
+++ b/config/blacklist.yml
@@ -8,6 +8,8 @@
 - anal invader
 - analicker
 - anus
+- CBD
+- gummies
 - "4r5e"
 - "5h1t"
 - "5hit"
@@ -160,6 +162,7 @@
 - crap head
 - crapface
 - craphead
+- heroine
 - crapper
 - cum
 - cum belch
