--- a/settings.json
+++ b/settings.json
@@ -6,5 +6,8 @@
   },
   "files.associations": {
     "*.erb": "erb"
-  }
+  },
+  "rufo.exe": "/Users/miajohansson/.rvm/gems/ruby-3.1.3@blog/bin/rufo", // can be an absolute path
+  "rufo.useBundler": false
+  // "rufo.exe": "/Users/miajohansson/.rvm/gems/ruby-3.1.3/wrappers/rufo"
 }
