rake task to delete bad comments and better filtering plus task to find bad words in posts

--- a/config/blacklist.yml
+++ b/config/blacklist.yml
@@ -8,11 +8,10 @@
 - anal invader
 - analicker
 - anus
-- CBD
 - gummies
-- "4r5e"
-- "5h1t"
-- "5hit"
+- 4r5e
+- 5h1t
+- 5hit
 - a55
 - anal
 - ar5e
@@ -388,10 +387,13 @@
 - nazi
 - niger
 - nigga
+- niggas
 - niggah
 - nigger
 - nip
 - nipple
+- cbd
+- CBD
 - nutted
 - nutter
 - nutting
@@ -575,649 +577,642 @@
 - wop
 - wrapping the weasel
 - yclit
-arse
-arsehole
-as useful as tits on a bull
-balls
-bastard
-beaver
-beef curtains
-bell
-bellend
-bent
-berk
-bint
-bitch
-blighter
-blimey
-blimey o'reilly
-bloodclaat
-bloody
-bloody hell
-blooming
-bollocks
-bonk
-bugger
-bugger me
-bugger off
-built like a brick shit-house
-bukkake
-bullshit
-cack
-cad
-chav
-cheese eating surrender monkey
-choad
-chuffer
-clunge
-cobblers
-cock
-cock cheese
-cock jockey
-cock-up
-cocksucker
-cockwomble
-codger
-cor blimey
-corey
-cow
-crap
-crikey
-cunt
-daft
-daft cow
-damn
-dick
-dickhead
-did he bollocks!
-did i fuck as like!
-dildo
-dodgy
-duffer
-fanny
-feck
-flaps
-fuck
-fuck me sideways!
-fucking cunt
-fucktard
-gash
-ginger
-git
-gob shite
-goddam
-gorblimey
-gordon bennett
-gormless
-a knob
-hell
-hobknocker
-I'd rather snort my own cum
-jesus christ
-jizz
-knob
-knobber
-knobend
-knobhead
-ligger
-like fucking a dying man's handshake
-mad as a hatter
-manky
-minge
-minger
-minging
-motherfucker
-munter
-muppet
-naff
-nitwit
-nonce
-numpty
-nutter
-off their rocker
-penguin
-pillock
-pish
-piss off
-piss-flaps
-pissed
-pissed off
-play the five-fingered flute
-plonker
-ponce
-poof
-pouf
-poxy
-prat
-prick
-prick
-prickteaser
-punani
-punny
-pussy
-randy
-rapey
-rat arsed
-rotter
-rubbish
-scrubber
-shag
-shit
-shite
-shitfaced
-skank
-slag
-slapper
-slut
-snatch
-sod
-sod-off
-son of a bitch
-spunk
-stick it up your arse!
-swine
-taking the piss
-tart
-tits
-toff
-tosser
-trollop
-tuss
-twat
-twonk
-fukin
-u fukin wanker
-wally
-wanker
-wankstain
-wazzack
-whore
-https://
-http://
-2g1c
-2 girls 1 cup
-acrotomophilia
-alabama hot pocket
-alaskan pipeline
-anal
-anilingus
-anus
-apeshit
-arsehole
-ass
-asshole
-assmunch
-auto erotic
-autoerotic
-babeland
-baby batter
-baby juice
-ball gag
-ball gravy
-ball kicking
-ball licking
-ball sack
-ball sucking
-bangbros
-bangbus
-bareback
-barely legal
-barenaked
-bastard
-bastardo
-bastinado
-bbw
-bdsm
-beaner
-beaners
-beaver cleaver
-beaver lips
-beastiality
-bestiality
-big black
-big breasts
-big knockers
-big tits
-bimbos
-birdlock
-bitch
-bitches
-blonde action
-blonde on blonde action
-blowjob
-blow job
-blow your load
-blue waffle
-blumpkin
-bollocks
-bondage
-boner
-boob
-boobs
-booty call
-brown showers
-brunette action
-bukkake
-bulldyke
-bullet vibe
-bullshit
-bung hole
-bunghole
-busty
-butt
-buttcheeks
-butthole
-camel toe
-camgirl
-camslut
-camwhore
-carpet muncher
-carpetmuncher
-chocolate rosebuds
-cialis
-circlejerk
-cleveland steamer
-clit
-clitoris
-clover clamps
-clusterfuck
-cock
-cocks
-coprolagnia
-coprophilia
-cornhole
-coon
-coons
-creampie
-cum
-cumming
-cumshot
-cumshots
-cunnilingus
-cunt
-darkie
-date rape
-daterape
-deep throat
-deepthroat
-dendrophilia
-dick
-dildo
-dingleberry
-dingleberries
-dirty pillows
-dirty sanchez
-doggie style
-doggiestyle
-doggy style
-doggystyle
-dog style
-dolcett
-domination
-dominatrix
-dommes
-donkey punch
-double dong
-double penetration
-dp action
-dry hump
-dvda
-eat my ass
-ecchi
-ejaculation
-erotic
-erotism
-escort
-eunuch
-fag
-faggot
-fecal
-felch
-fellatio
-feltch
-female squirting
-femdom
-figging
-fingerbang
-fingering
-fisting
-foot fetish
-footjob
-frotting
-fuck
-fuck buttons
-fuckin
-fucking
-fucktards
-fudge packer
-fudgepacker
-futanari
-gangbang
-gang bang
-gay sex
-genitals
-giant cock
-girl on
-girl on top
-girls gone wild
-goatcx
-goatse
-god damn
-gokkun
-golden shower
-goodpoop
-goo girl
-goregasm
-grope
-group sex
-g-spot
-guro
-hand job
-handjob
-hard core
-hardcore
-hentai
-homoerotic
-honkey
-hooker
-horny
-hot carl
-hot chick
-how to kill
-how to murder
-huge fat
-humping
-incest
-intercourse
-jack off
-jail bait
-jailbait
-jelly donut
-jerk off
-jigaboo
-jiggaboo
-jiggerboo
-jizz
-juggs
-kike
-kinbaku
-backlinks
-darkweb
-seo
-kinkster
-kinky
-knobbing
-leather restraint
-leather straight jacket
-lemon party
-livesex
-lolita
-lovemaking
-make me come
-male squirting
-masturbate
-masturbating
-masturbation
-menage a trois
-milf
-missionary position
-mong
-motherfucker
-mound of venus
-mr hands
-muff diver
-muffdiving
-nambla
-nawashi
-negro
-neonazi
-nigga
-nigger
-nig nog
-nimphomania
-nipple
-nipples
-nsfw
-nsfw images
-nude
-nudity
-nutten
-nympho
-nymphomania
-octopussy
-omorashi
-one cup two girls
-one guy one jar
-orgasm
-orgy
-paedophile
-paki
-panties
-panty
-pedobear
-pedophile
-pegging
-penis
-phone sex
-piece of shit
-pikey
-pissing
-piss pig
-pisspig
-playboy
-pleasure chest
-pole smoker
-ponyplay
-poof
-poon
-poontang
-punany
-poop chute
-poopchute
-porn
-porno
-pornography
-prince albert piercing
-pthc
-pubes
-pussy
-queaf
-queef
-quim
-raghead
-raging boner
-rape
-raping
-rapist
-rectum
-reverse cowgirl
-rimjob
-rimming
-rosy palm
-rosy palm and her 5 sisters
-rusty trombone
-sadism
-santorum
-scat
-schlong
-scissoring
-semen
-sex
-sexcam
-sexo
-sexy
-sexual
-sexually
-sexuality
-shaved beaver
-shaved pussy
-shemale
-shibari
-shit
-shitblimp
-shitty
-shota
-shrimping
-skeet
-slanteye
-slut
-s&m
-smut
-snatch
-snowballing
-sodomize
-sodomy
-spastic
-spic
-splooge
-splooge moose
-spooge
-spread legs
-spunk
-strap on
-strapon
-strappado
-strip club
-style doggy
-suck
-sucks
-suicide girls
-sultry women
-swastika
-swinger
-tainted love
-taste my
-tea bagging
-threesome
-throating
-thumbzilla
-tied up
-tight white
-tit
-tits
-titties
-titty
-tongue in a
-topless
-tosser
-towelhead
-tranny
-tribadism
-tub girl
-tubgirl
-tushy
-twat
-twink
-twinkie
-two girls one cup
-undressing
-upskirt
-urethra play
-urophilia
-vagina
-venus mound
-viagra
-vibrator
-violet wand
-vorarephilia
-voyeur
-voyeurweb
-voyuer
-vulva
-wank
-wetback
-wet dream
-white power
-whore
-worldsex
-wrapping men
-wrinkled starfish
-xx
-xxx
-yaoi
-yellow showers
-yiffy
-zoophilia
-🖕
-trading
-stocks
-weight loss
-meet singles
-No hidden charges
-No hidden costs
-Lose weight
-Best price
-Best rates
-Cash bonus
-Money order
-Make money
-Big bucks
-Pure profits
-Cures
-Weight loss
-Meet singles
-No catch
-No cost
-No credit check
-No fees
-No gimmick
-Refinance
-No interest
-No investment
-No capital
-No obligation
-No purchase necessary
-No questions asked
-No strings attached
-No experience
-Requires initial investment
-This isn’t a scam
-This isn’t junk
-This isn’t spam
-Earn extra cash
-Earn extra income
-Additional income
-Expect to earn
-Fast cash
-Financial freedom
-Lowest price
-Free access
-Free consultation
-Free hosting
-Free info
-Free investment
-Free membership
-Free money
-Free preview
-Free quote
-Free offer
-Free sample
-Free trial
-Free web traffic
-Free search engine listings
-Free gift
-Free DVD
-Full refund
-Name brand products
-Month trial offer
-Get out of debt
-Increase sales
-Increase traffic
-Satisfaction guaranteed
-Get paid
-Get rich
-Unsecured credit
-Own boss
-Work from home
-Home-based business
-No credit card
-Accept credit cards
-Credit card offers
-Low mortgage rates
-Low interest rates
-Easy terms
-Priority mail
-Casino
-cbd
-CBD
-gummies
+- arse
+- arsehole
+- as useful as tits on a bull
+- balls
+- bastard
+- beaver
+- beef curtains
+- bell
+- bellend
+- bent
+- berk
+- bint
+- bitch
+- blighter
+- blimey
+- blimey o'reilly
+- bloodclaat
+- bloody
+- bloody hell
+- blooming
+- bollocks
+- bonk
+- bugger
+- bugger me
+- bugger off
+- built like a brick shit-house
+- bukkake
+- bullshit
+- cack
+- cad
+- chav
+- cheese eating surrender monkey
+- choad
+- chuffer
+- clunge
+- cobblers
+- cock
+- cock cheese
+- cock jockey
+- cock-up
+- cocksucker
+- cockwomble
+- codger
+- cor blimey
+- corey
+- cow
+- crap
+- crikey
+- cunt
+- daft
+- daft cow
+- damn
+- dick
+- dickhead
+- did he bollocks!
+- did i fuck as like!
+- dildo
+- dodgy
+- duffer
+- fanny
+- feck
+- flaps
+- fuck
+- fuck me sideways!
+- fucking cunt
+- fucktard
+- gash
+- ginger
+- git
+- gob shite
+- goddam
+- gorblimey
+- gordon bennett
+- gormless
+- a knob
+- hell
+- hobknocker
+- I'd rather snort my own cum
+- jesus christ
+- jizz
+- knob
+- knobber
+- knobend
+- knobhead
+- ligger
+- like fucking a dying man's handshake
+- mad as a hatter
+- manky
+- minge
+- minger
+- minging
+- motherfucker
+- munter
+- muppet
+- naff
+- nitwit
+- nonce
+- numpty
+- nutter
+- off their rocker
+- penguin
+- pillock
+- pish
+- piss off
+- piss-flaps
+- pissed
+- pissed off
+- play the five-fingered flute
+- plonker
+- ponce
+- poof
+- pouf
+- poxy
+- prat
+- prick
+- prick
+- prickteaser
+- punani
+- punny
+- pussy
+- randy
+- rapey
+- rat arsed
+- rotter
+- rubbish
+- scrubber
+- shag
+- shit
+- shite
+- shitfaced
+- skank
+- slag
+- slapper
+- slut
+- snatch
+- sod
+- sod-off
+- son of a bitch
+- spunk
+- stick it up your arse!
+- swine
+- taking the piss
+- tart
+- tits
+- toff
+- tosser
+- trollop
+- tuss
+- twat
+- twonk
+- fukin
+- u fukin wanker
+- wally
+- wanker
+- wankstain
+- wazzack
+- whore
+- 2g1c
+- 2 girls 1 cup
+- acrotomophilia
+- alabama hot pocket
+- alaskan pipeline
+- anal
+- anilingus
+- anus
+- apeshit
+- arsehole
+- ass
+- asshole
+- assmunch
+- auto erotic
+- autoerotic
+- babeland
+- baby batter
+- baby juice
+- ball gag
+- ball gravy
+- ball kicking
+- ball licking
+- ball sack
+- ball sucking
+- bangbros
+- bangbus
+- bareback
+- barely legal
+- barenaked
+- bastard
+- bastardo
+- bastinado
+- bbw
+- bdsm
+- beaner
+- beaners
+- beaver cleaver
+- beaver lips
+- beastiality
+- bestiality
+- big black
+- big breasts
+- big knockers
+- big tits
+- bimbos
+- birdlock
+- bitch
+- bitches
+- blonde action
+- blonde on blonde action
+- blowjob
+- blow job
+- blow your load
+- blue waffle
+- blumpkin
+- bollocks
+- bondage
+- boner
+- boob
+- boobs
+- booty call
+- brown showers
+- brunette action
+- bukkake
+- bulldyke
+- bullet vibe
+- bullshit
+- bung hole
+- bunghole
+- busty
+- butt
+- buttcheeks
+- butthole
+- camel toe
+- camgirl
+- camslut
+- camwhore
+- carpet muncher
+- carpetmuncher
+- chocolate rosebuds
+- cialis
+- circlejerk
+- cleveland steamer
+- clit
+- clitoris
+- clover clamps
+- clusterfuck
+- cock
+- cocks
+- coprolagnia
+- coprophilia
+- cornhole
+- coon
+- coons
+- creampie
+- cum
+- cumming
+- cumshot
+- cumshots
+- cunnilingus
+- cunt
+- darkie
+- date rape
+- daterape
+- deep throat
+- deepthroat
+- dendrophilia
+- dick
+- dildo
+- dingleberry
+- dingleberries
+- dirty pillows
+- dirty sanchez
+- doggie style
+- doggiestyle
+- doggy style
+- doggystyle
+- dog style
+- dolcett
+- domination
+- dominatrix
+- dommes
+- donkey punch
+- double dong
+- double penetration
+- dp action
+- dry hump
+- dvda
+- eat my ass
+- ecchi
+- ejaculation
+- erotic
+- erotism
+- escort
+- eunuch
+- fag
+- faggot
+- fecal
+- felch
+- fellatio
+- feltch
+- female squirting
+- femdom
+- figging
+- fingerbang
+- fingering
+- fisting
+- foot fetish
+- footjob
+- frotting
+- fuck
+- fuck buttons
+- fuckin
+- fucking
+- fucktards
+- fudge packer
+- fudgepacker
+- futanari
+- gangbang
+- gang bang
+- gay sex
+- genitals
+- giant cock
+- girl on
+- girl on top
+- girls gone wild
+- goatcx
+- goatse
+- god damn
+- gokkun
+- golden shower
+- goodpoop
+- goo girl
+- goregasm
+- grope
+- group sex
+- g-spot
+- guro
+- hand job
+- handjob
+- hard core
+- hardcore
+- hentai
+- homoerotic
+- honkey
+- hooker
+- horny
+- hot carl
+- hot chick
+- how to kill
+- how to murder
+- huge fat
+- humping
+- incest
+- intercourse
+- jack off
+- jail bait
+- jailbait
+- jelly donut
+- jerk off
+- jigaboo
+- jiggaboo
+- jiggerboo
+- jizz
+- juggs
+- kike
+- kinbaku
+- backlinks
+- darkweb
+- seo
+- kinkster
+- kinky
+- knobbing
+- leather restraint
+- leather straight jacket
+- lemon party
+- livesex
+- lolita
+- lovemaking
+- make me come
+- male squirting
+- masturbate
+- masturbating
+- masturbation
+- menage a trois
+- milf
+- missionary position
+- mong
+- motherfucker
+- mound of venus
+- mr hands
+- muff diver
+- muffdiving
+- nambla
+- nawashi
+- negro
+- neonazi
+- nigga
+- nigger
+- nig nog
+- nimphomania
+- nipple
+- nipples
+- nsfw
+- nsfw images
+- nude
+- nudity
+- nutten
+- nympho
+- nymphomania
+- octopussy
+- omorashi
+- one cup two girls
+- one guy one jar
+- orgasm
+- orgy
+- paedophile
+- paki
+- panties
+- panty
+- pedobear
+- pedophile
+- pegging
+- penis
+- phone sex
+- piece of shit
+- pikey
+- pissing
+- piss pig
+- pisspig
+- playboy
+- pleasure chest
+- pole smoker
+- ponyplay
+- poof
+- poon
+- poontang
+- punany
+- poop chute
+- poopchute
+- porn
+- porno
+- pornography
+- prince albert piercing
+- pthc
+- pubes
+- pussy
+- queaf
+- queef
+- quim
+- raghead
+- raging boner
+- rape
+- raping
+- rapist
+- rectum
+- reverse cowgirl
+- rimjob
+- rimming
+- rosy palm
+- rosy palm and her 5 sisters
+- rusty trombone
+- sadism
+- santorum
+- scat
+- schlong
+- scissoring
+- semen
+- sex
+- sexcam
+- sexo
+- sexy
+- sexual
+- sexually
+- sexuality
+- shaved beaver
+- shaved pussy
+- shemale
+- shibari
+- shit
+- shitblimp
+- shitty
+- shota
+- shrimping
+- skeet
+- slanteye
+- slut
+- s&m
+- smut
+- snatch
+- snowballing
+- sodomize
+- sodomy
+- spastic
+- spic
+- splooge
+- splooge moose
+- spooge
+- spread legs
+- spunk
+- strap on
+- strapon
+- strappado
+- strip club
+- style doggy
+- suck
+- sucks
+- suicide girls
+- sultry women
+- swastika
+- swinger
+- tainted love
+- taste my
+- tea bagging
+- threesome
+- throating
+- thumbzilla
+- tied up
+- tight white
+- tit
+- tits
+- titties
+- titty
+- tongue in a
+- topless
+- tosser
+- towelhead
+- tranny
+- tribadism
+- tub girl
+- tubgirl
+- tushy
+- twat
+- twink
+- twinkie
+- two girls one cup
+- undressing
+- upskirt
+- urethra play
+- urophilia
+- vagina
+- venus mound
+- viagra
+- vibrator
+- violet wand
+- vorarephilia
+- voyeur
+- voyeurweb
+- voyuer
+- vulva
+- wank
+- wetback
+- wet dream
+- white power
+- whore
+- worldsex
+- wrapping men
+- wrinkled starfish
+- xx
+- xxx
+- yaoi
+- yellow showers
+- yiffy
+- zoophilia
+- 🖕
+- trading
+- stocks
+- weight loss
+- meet singles
+- No hidden charges
+- No hidden costs
+- Lose weight
+- Best price
+- Best rates
+- Cash bonus
+- Money order
+- Make money
+- Big bucks
+- Pure profits
+- Cures
+- Weight loss
+- Meet singles
+- No catch
+- No cost
+- No credit check
+- No fees
+- No gimmick
+- Refinance
+- No interest
+- No investment
+- No capital
+- No obligation
+- No purchase necessary
+- No questions asked
+- No strings attached
+- No experience
+- Requires initial investment
+- Earn extra cash
+- Earn extra income
+- Additional income
+- Expect to earn
+- Fast cash
+- Financial freedom
+- Lowest price
+- Free access
+- Free consultation
+- Free hosting
+- Free info
+- Free investment
+- Free membership
+- Free money
+- Free preview
+- Free quote
+- Free offer
+- Free sample
+- Free trial
+- Free web traffic
+- Free search engine listings
+- Free gift
+- Free DVD
+- Full refund
+- Name brand products
+- Month trial offer
+- Get out of debt
+- Increase sales
+- Increase traffic
+- Satisfaction guaranteed
+- Get paid
+- Get rich
+- Unsecured credit
+- Own boss
+- Work from home
+- Home-based business
+- No credit card
+- Accept credit cards
+- Credit card offers
+- Low mortgage rates
+- Low interest rates
+- Easy terms
+- Priority mail
+- Casino
+- gummies
