updated black list files

--- a/config/blacklist.yml
+++ b/config/blacklist.yml
@@ -1192,6 +1192,9 @@
 - Full refund
 - Name brand products
 - Month trial offer
+- Roofing
+- Contractors
+- Contractor
 - Get out of debt
 - Increase sales
 - Increase traffic
