added back to blacklist

--- a/config/small_blacklist.yml
+++ b/config/small_blacklist.yml
@@ -369,6 +369,7 @@
 - peckernose
 - pedophile
 - penis breath
+- penis
 - penisbreath
 - phelch
 - phelcher
@@ -522,6 +523,7 @@
 - uplay wid dix
 - vag
 - vagina licker
+- vagina
 - welfare rat
 - wet back
 - wetback
@@ -577,6 +579,8 @@
 - dodgy
 - feck
 - fuck
+- fuckin
+- fucked
 - fuck me sideways!
 - fucking cunt
 - fucktard
@@ -821,6 +825,7 @@
 - handjob
 - hentai
 - homoerotic
+- homo
 - honkey
 - hooker
 - horny
@@ -830,7 +835,6 @@
 - how to murder
 - huge fat
 - humping
-- incest
 - intercourse
 - jack off
 - jail bait
