getting rid of hide social media script temporarily

--- a/config/blacklist.yml
+++ b/config/blacklist.yml
@@ -1186,6 +1186,11 @@
 - Free sample
 - Free trial
 - Free web traffic
+- molester
+- bawls
+- sug
+- stfu
+- socialdemokraten
 - Free search engine listings
 - Free gift
 - Free DVD
