--- a/config/small_blacklist.yml
+++ b/config/small_blacklist.yml
@@ -111,8 +111,6 @@
 - chink
 - choad
 - chode
-- choke my chicken
-- choking the chicken
 - cocaine
 - cock jockey
 - cock knocker
@@ -192,12 +190,7 @@
 - dangelberry
 - dangleberry
 - deez nuts
-- dick breath
-- dick fiend
-- dick head
-- dick nose
-- dick wad
-- dick weed
+- dick
 - dickbreath
 - dickface
 - dickfiend
@@ -326,10 +319,7 @@
 - kum
 - kumm
 - lesbo
-- lettuce picker
-- lettucepicker
 - lezbo
-- lick my nuts
 - lickcock
 - licknipple
 - limpdick
@@ -369,7 +359,6 @@
 - peckernose
 - pedophile
 - penis breath
-- penis
 - penisbreath
 - phelch
 - phelcher
@@ -523,7 +512,6 @@
 - uplay wid dix
 - vag
 - vagina licker
-- vagina
 - welfare rat
 - wet back
 - wetback
@@ -892,7 +880,6 @@
 - paki
 - pedobear
 - pedophile
-- penis
 - phone sex
 - piece of shit
 - pikey
@@ -933,7 +920,6 @@
 - scissoring
 - semen
 - sexcam
-- sexo
 - shaved beaver
 - shaved pussy
 - shemale
