edited pages and also added model pages so that editors can contribute to article requirements

--- a/config/small_blacklist.yml
+++ b/config/small_blacklist.yml
@@ -794,6 +794,7 @@
 - gangbang
 - gang bang
 - genitals
+- genocide
 - giant cock
 - girl on top
 - girls gone wild
@@ -987,6 +988,9 @@
 - wet dream
 - white power
 - whore
+- vagina
+- penis
+- sex
 - worldsex
 - wrapping men
 - wrinkled starfish
